# robotframework_demo

./: .pabotsuitenames  log.html  main.py  output.xml  pyproject.toml  report.html  test_demo.robot  test_headless.robot
api/: api_demo.robot
data_driven/: airports.robot  data.csv  ddt_csv.robot  ddt_demo.robot
lib/: faker_airport.py
pabot_results/0/: output.xml  playwright-log.txt  robot_argfile.txt  robot_stdout.out
pabot_results/1/: output.xml  playwright-log.txt  robot_argfile.txt  robot_stdout.out
pabot_results/2/: output.xml  playwright-log.txt  robot_argfile.txt  robot_stdout.out
pabot_results/3/: output.xml  playwright-log.txt  robot_argfile.txt  robot_stdout.out
pabot_results/4/: output.xml  playwright-log.txt  robot_argfile.txt  robot_stdout.out
pabot_results/5/: output.xml  playwright-log.txt  robot_argfile.txt  robot_stdout.out
page_objects/: forgot_password_tests.robot  login_page_tests.robot
resources/: dashboard.resource  forgot_password.resource  generic.resource  keywords.resource  login.resource
results/: log.html  output.xml  playwright-log.txt  report.html
tests/: bdd_demo.robot  checkbox_demo.robot  confirm_alert_demo.robot  drag_and_drop_demo.robot  dropdown_demo.robot  keywords.resource  login_page.robot  multiple_windows_demo.robot  ok_alert_demo.robot  radio_button_demo.robot  switch_window_demo.robot  test_demo.robot  test_headless.robot  test_variables.robot  textbox_alert_demo.robot
